fixed icons on mobile nav, some text and links

--- a/src/styles/partials/_nav.scss
+++ b/src/styles/partials/_nav.scss
@@ -143,6 +143,7 @@
         flex-wrap: wrap;
         justify-content: space-around;
         svg {
+            stroke: none;
             font-size: 40px;
             margin: 10px;
         }
